--- a/index.html
+++ b/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae</title>
+	<meta charset="utf-8">
+	<title>Curriculum</title>
+	<link rel="stylesheet" type="text/css" href="indexestilos.css">
 </head>
 <body>
-  
-  <h1>Curriculum Vitae</h1>
+	<h1>Génesis Sumoza</h1>
+	<section class="primer">
+		<div>
+			<p>Villa de Cura- Aragua - Venezuela.</p>
+			<p>Teléfono: 0412-489-0505</p>
+			<p>Email: sumozacalcurian@gmail.com</p>
+		</div>
+	</section>
+	<h2>Formación Académica</h2>
+	<section class="padre">
+		<div class="hijo">
+			<h3>Primaria:</h3>
+			<p> E. P. E "Victor Manuel Padilla" de 1ro a 6to grado.</p>
+			<h3>Secundaria:</h3>
+			<p>E. T. P. "San Luis Rey" de 1ro a 2do año. <br>U. E. P. "Manuel Morales Carabaño" de 3ro a 5to año</p>
+			<h3>Universitaria:</h3>
+			<p>Cuarto semestre en Ingeniería en Informática en proceso. U. N. E. "Rómulo Gallegos" </p>
+		</div>
+	</section>
+	<h2>Experiencia Laboral</h2>
+	<section class="padre">
+		<div>
+			<h3>Trabajos Informales</h3>
+			<ul>
+				<li>Cajera.</li>
+				<li>Niñera.</li>
+				<li>Atención al Cliente.</li>
+				<li>Profesora de Baile.</li>
+				<li>Ayudante en Natación.</li>
+				<li>Locutora en Radio</li>
+				<li>Realizar Trabajos Escolares</li>
+			</ul>
+		</div>
+	</section>
 
+	<h2>Habilidades y Destrezas</h2>
+	<section class="padre">
+		<div>
+			<ul>
+				<li>Dominio de Grupo</li>
+				<li>Facilidad de Enseñanza</li>
+				<li>Uso de Paquete Office</li>
+				<li>Apta para Discursos</li>
+				<li>Aprendizaje Rápido</li>
+				<li>Práctica</li>
+			</ul>
+		</div>
+	</section>
+	<h2>Redes Sociales</h2>
+	<section class="padre">
+		<h3>Facebook: <a href="https://www.facebook.com/genesis.sumozacalcurian/">Génesis Sumoza</a></h3>
+	</section>
+	<footer>
+		<h6>Prohibido el uso indebido de este Curriculum Personal</h6>
+	</footer>
 </body>
 </html>
